--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -96,6 +96,94 @@
     "# Train the model\n",
     "history = model.fit(train_generator, steps_per_epoch=train_generator.samples // 32, epochs=10, validation_data=validation_generator, validation_steps=validation_generator.samples // 32)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.Adam.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "11/11 [==============================] - 26s 2s/step - loss: 1.3890 - accuracy: 0.5015 - val_loss: 1.2633 - val_accuracy: 0.2708 - lr: 0.0010\n",
+      "Epoch 2/10\n",
+      "11/11 [==============================] - 23s 2s/step - loss: 0.9325 - accuracy: 0.6778 - val_loss: 1.0708 - val_accuracy: 0.5104 - lr: 0.0010\n",
+      "Epoch 3/10\n",
+      "11/11 [==============================] - 22s 2s/step - loss: 0.6949 - accuracy: 0.7477 - val_loss: 1.4215 - val_accuracy: 0.2708 - lr: 0.0010\n",
+      "Epoch 4/10\n",
+      "11/11 [==============================] - 24s 2s/step - loss: 0.6567 - accuracy: 0.7273 - val_loss: 2.0107 - val_accuracy: 0.3021 - lr: 0.0010\n",
+      "Epoch 5/10\n",
+      "11/11 [==============================] - 23s 2s/step - loss: 0.5420 - accuracy: 0.7964 - val_loss: 2.5244 - val_accuracy: 0.1146 - lr: 0.0010\n",
+      "Epoch 6/10\n",
+      "11/11 [==============================] - 22s 2s/step - loss: 0.4469 - accuracy: 0.8116 - val_loss: 1.3438 - val_accuracy: 0.5208 - lr: 5.0000e-04\n",
+      "Epoch 7/10\n",
+      "11/11 [==============================] - 22s 2s/step - loss: 0.3485 - accuracy: 0.8815 - val_loss: 1.5673 - val_accuracy: 0.3958 - lr: 5.0000e-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Improve\n",
+    "# Define the data generators with data augmentation\n",
+    "train_datagen = keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    rotation_range=30,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=0.2,\n",
+    "    zoom_range=0.2,\n",
+    "    horizontal_flip=True\n",
+    ")\n",
+    "\n",
+    "validation_datagen = keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "# Define the ResNet model with dropout and batch normalization\n",
+    "def resnet_model(num_classes):\n",
+    "    inputs = keras.Input(shape=(224, 224, 3))\n",
+    "\n",
+    "    x = layers.Conv2D(64, 7, activation='relu', padding='same')(inputs)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.MaxPooling2D(2)(x)\n",
+    "\n",
+    "    x = resnet_block(x, 64, 2)\n",
+    "    x = layers.Dropout(0.2)(x)\n",
+    "    x = resnet_block(x, 128, 2)\n",
+    "    x = layers.Dropout(0.2)(x)\n",
+    "    x = resnet_block(x, 256, 2)\n",
+    "    x = layers.Dropout(0.2)(x)\n",
+    "    x = resnet_block(x, 512, 2)\n",
+    "    x = layers.Dropout(0.2)(x)\n",
+    "\n",
+    "    x = layers.GlobalAveragePooling2D()(x)\n",
+    "    x = layers.Dense(num_classes, activation='softmax')(x)\n",
+    "\n",
+    "    model = keras.Model(inputs, x)\n",
+    "    return model\n",
+    "\n",
+    "# Compile the model with a learning rate scheduler\n",
+    "model = resnet_model(4)\n",
+    "model.compile(optimizer=keras.optimizers.Adam(lr=0.001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "lr_scheduler = keras.callbacks.LearningRateScheduler(lambda epoch: 0.001 * 0.5 ** (epoch // 5))\n",
+    "\n",
+    "# Train the model with early stopping\n",
+    "history = model.fit(\n",
+    "    train_generator,\n",
+    "    steps_per_epoch=train_generator.samples // 32,\n",
+    "    epochs=10,\n",
+    "    validation_data=validation_generator,\n",
+    "    validation_steps=validation_generator.samples // 32,\n",
+    "    callbacks=[lr_scheduler, keras.callbacks.EarlyStopping(patience=5)]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
